<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background_1"
    android:backgroundTint="#A7BEED"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tittle"
        android:textSize="28sp"
        android:gravity="center"
        android:layout_marginBottom="50dp"
       android:layout_marginTop="-20dp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="400sp"
        android:layout_height="200sp"
        android:scaleType="centerCrop"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:src="@drawable/image_banner" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:text="@string/emp_name"/>

        <EditText
            android:id="@+id/textName"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:maxLines="1"
            android:ems="10"
            android:textColor="@color/purple_700"
            android:textColorHint="#039BE5"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:text="@string/emp_salary"/>
        <EditText
            android:id="@+id/textSalary"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:ems="10"
            android:textSize="20sp"
            android:textColor="@color/purple_700"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:text="@string/emp_tax"/>
        <EditText
            android:id="@+id/textTax"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="10"
            android:maxLines="1"
            android:layout_marginStart="18dp"
            android:textSize="20sp"
            android:textColor="@color/purple_700"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:text="@string/emp_netSalary"/>
        <EditText
            android:id="@+id/textNetSalary"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="10"
            android:maxLines="1"
            android:layout_marginStart="46dp"
            android:textSize="20sp"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@color/purple_700"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="90dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:text="@string/ok"
            android:layout_gravity="center"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="90dp"
            android:layout_height="63dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="70dp"
            android:text="@string/cancel"
            android:textSize="10sp" />


    </LinearLayout>


</LinearLayout>